fixed image gap: masonry.layout on scroll without padding loss

--- a/public/stylesheets/remstyle.sass
+++ b/public/stylesheets/remstyle.sass
@@ -24,11 +24,11 @@ header
     transform: translateY(-50%)
     vertical-align: bottom
     line-height: 1.2em
-    font-size: 3vmin
+    font-size: 24px
     display: inline-block
 
   img
-    width: 3%
+    width: 30px
     margin: .5%
     position: relative
     vertical-align: middle
@@ -38,10 +38,13 @@ nav, .item
   width: 250px
   margin-bottom: 10px
 #grid
-  position: relative;
-  padding: 2%
-  padding-right: 1%
-  padding-top: 5.5%
+  position: absolute
+  width: 100%
+  top: 5.5%
+  left: 2%
+  //padding: 2%
+  //padding-right: 1%
+  //padding-top: 5.5%
   text-align: center
 
 article
